Opened 14 years ago
Closed 14 years ago
#1124 closed defect (fixed)
avi msrle: broken output file with -vcodec copy
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | git-master | Keywords: | msrle |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | yes |
Description
http://ffmpeg.org/trac/ffmpeg/raw-attachment/ticket/1116/AVI-RLE_MP3.avi
C:\>ffmpeg -i AVI-RLE_MP3.avi -vcodec copy -an out.avi
ffmpeg version N-39006-gf1fdd20 Copyright (c) 2000-2012 the FFmpeg developers
built on Mar 22 2012 02:30:44 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
libavutil 51. 44.100 / 51. 44.100
libavcodec 54. 12.100 / 54. 12.100
libavformat 54. 2.100 / 54. 2.100
libavdevice 53. 4.100 / 53. 4.100
libavfilter 2. 65.102 / 2. 65.102
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 7.100 / 0. 7.100
libpostproc 52. 0.100 / 52. 0.100
Input #0, avi, from 'AVI-RLE_MP3.avi':
Duration: 00:00:05.95, start: 0.000000, bitrate: 2274 kb/s
Stream #0:0: Video: msrle ([1][0][0][0] / 0x0001), pal8, 192x128, 24 fps, 24
tbr, 24 tbn, 24 tbc
Stream #0:1: Audio: mp3 (U[0][0][0] / 0x0055), 11025 Hz, mono, s16, 16 kb/s
Output #0, avi, to 'out.avi':
Metadata:
ISFT : Lavf54.2.100
Stream #0:0: Video: msrle ([1][0][0][0] / 0x0001), pal8, 192x128, q=2-31, 24
fps, 24 tbn, 24 tbc
Stream mapping:
Stream #0:0 -> #0:0 (copy)
Press [q] to stop, [?] for help
frame= 143 fps=0.0 q=-1.0 Lsize= 1443kB time=00:00:05.95 bitrate=1984.6kbits
/s
video:1434kB audio:0kB global headers:0kB muxing overhead 0.682447%
Change History (3)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
| Analyzed by developer: | set |
|---|---|
| Keywords: | msrle added |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:3 by , 14 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



This is because decoder needs bits_per_coded sample available from demuxer to detect colorspace. And -vcodec copy can not currently handle this.