ffmpeg: preserve bits_per_coded sample on stream copy.

Fixes Ticket1124

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>